--- a/controller/vault/values.yaml
+++ b/controller/vault/values.yaml
@@ -772,7 +772,7 @@ vault:
       mountPath: "/vault/data"
       # Name of the storage class to use.  If null it will use the
       # configured default Storage Class.
-      storageClass: null
+      storageClass: gp3
       # Access Mode of the storage device being used for the PVC
       accessMode: ReadWriteOnce
       # Annotations to apply to the PVC
@@ -801,7 +801,7 @@ vault:
       mountPath: "/vault/audit"
       # Name of the storage class to use.  If null it will use the
       # configured default Storage Class.
-      storageClass: null
+      storageClass: gp3
       # Access Mode of the storage device being used for the PVC
       accessMode: ReadWriteOnce
       # Annotations to apply to the PVC
