fix: fix values file and tolerations

--- a/controller/karpenter/values.yaml
+++ b/controller/karpenter/values.yaml
@@ -92,6 +92,10 @@ karpenter:
   tolerations:
     - key: CriticalAddonsOnly
       operator: Exists
+    - key: control-plane
+      operator: Equals
+      value: "true"
+      effect: NoSchedule
   # -- Additional volumes for the pod.
   extraVolumes: []
   # - name: aws-iam-token
