--- a/controller/karpenter/values.yaml
+++ b/controller/karpenter/values.yaml
@@ -13,9 +13,6 @@ karpenter:
   imagePullPolicy: IfNotPresent
   # -- Image pull secrets for Docker images.
   imagePullSecrets: []
-  service:
-    # -- Additional annotations for the Service.
-    annotations: {}
   serviceAccount:
     # -- Specifies if a ServiceAccount should be created.
     create: true
@@ -60,8 +57,6 @@ karpenter:
   # -- Bind the pod to the host network.
   # This is required when using a custom CNI.
   hostNetwork: false
-  # -- Specify which Kubernetes scheduler should dispatch the pod.
-  schedulerName: default-scheduler
   # -- Configure the DNS Policy for the pod
   dnsPolicy: ClusterFirst
   # -- Configure DNS Config for the pod
@@ -87,7 +82,7 @@ karpenter:
   topologySpreadConstraints:
     - maxSkew: 1
       topologyKey: topology.kubernetes.io/zone
-      whenUnsatisfiable: DoNotSchedule
+      whenUnsatisfiable: ScheduleAnyway
   # -- Tolerations to allow the pod to be scheduled to nodes with taints.
   tolerations:
     - key: CriticalAddonsOnly
@@ -96,6 +91,7 @@ karpenter:
       operator: Equal
       value: "true"
       effect: NoSchedule
+
   # -- Additional volumes for the pod.
   extraVolumes: []
   # - name: aws-iam-token
@@ -107,15 +103,13 @@ karpenter:
   #         expirationSeconds: 86400
   #         path: token
   controller:
-    # -- Distinguishing container name (containerName: karpenter-controller).
-    containerName: controller
     image:
       # -- Repository path to the controller image.
       repository: public.ecr.aws/karpenter/controller
       # -- Tag of the controller image.
-      tag: 1.1.1
+      tag: 0.36.0
       # -- SHA256 digest of the controller image.
-      digest: sha256:51bca600197c7c6e6e0838549664b2c12c3f8dd4b23744ab28202ae97ca5aed1
+      digest: sha256:90adaba9e8e9f66244324ca64408a5abbfe063f8c41fbbfebf226bdda4fadd58
     # -- Additional environment variables for the controller pod.
     env: []
     # - name: AWS_REGION
@@ -145,18 +139,40 @@ karpenter:
     sidecarVolumeMounts: []
     metrics:
       # -- The container port to use for metrics.
-      port: 8080
+      port: 8000
     healthProbe:
       # -- The container port to use for http health probe.
       port: 8081
+  webhook:
+    # -- Whether to enable the webhooks and webhook permissions.
+    enabled: true
+    # -- The container port to use for the webhook.
+    port: 8443
+    metrics:
+      # -- The container port to use for webhook metrics.
+      port: 8001
   # -- Global log level, defaults to 'info'
   logLevel: info
-  # -- Log outputPaths - defaults to stdout only
-  logOutputPaths:
-    - stdout
-  # -- Log errorOutputPaths - defaults to stderr only
-  logErrorOutputPaths:
-    - stderr
+  # -- Log configuration (Deprecated: Logging configuration will be dropped by v1, use logLevel instead)
+  logConfig:
+    # -- Whether to enable provisioning and mounting the log ConfigMap
+    enabled: false
+    # -- Log outputPaths - defaults to stdout only
+    outputPaths:
+      - stdout
+    # -- Log errorOutputPaths - defaults to stderr only
+    errorOutputPaths:
+      - stderr
+    # -- Log encoding - defaults to json - must be one of 'json', 'console'
+    logEncoding: json
+    # -- Component-based log configuration
+    logLevel:
+      # -- Global log level, defaults to 'info'
+      global: info
+      # -- Controller log level, defaults to 'info'
+      controller: info
+      # -- Error log level, defaults to 'error'
+      webhook: error
   # -- Global Settings to configure Karpenter
   settings:
     # -- The maximum length of a batch window. The longer this is, the more pods we can consider for provisioning at one
@@ -166,6 +182,10 @@ karpenter:
     # faster than this time, the batching window will be extended up to the maxDuration. If they arrive slower, the pods
     # will be batched separately.
     batchIdleDuration: 1s
+    # -- Role to assume for calling AWS services.
+    assumeRoleARN: ""
+    # -- Duration of assumed credentials in minutes. Default value is 15 minutes. Not used unless assumeRoleARN set.
+    assumeRoleDuration: 15m
     # -- Cluster CA bundle for TLS configuration of provisioned nodes. If not set, this is taken from the controller's TLS configuration for the API server.
     clusterCABundle: ""
     # -- Cluster name.
@@ -175,9 +195,7 @@ karpenter:
     # -- If true then assume we can't reach AWS services which don't have a VPC endpoint
     # This also has the effect of disabling look-ups to the AWS pricing endpoint
     isolatedVPC: false
-    # Marking this true means that your cluster is running with an EKS control plane and Karpenter should attempt to discover cluster details from the DescribeCluster API
-    eksControlPlane: false
-    # -- The VM memory overhead as a percent that will be subtracted from the total memory for all instance types. The value of `0.075` equals to 7.5%.
+    # -- The VM memory overhead as a percent that will be subtracted from the total memory for all instance types
     vmMemoryOverheadPercent: 0.075
     # -- Interruption queue is the name of the SQS queue used for processing interruption events from EC2
     # Interruption handling is disabled if not specified. Enabling interruption handling may
@@ -189,9 +207,10 @@ karpenter:
     # -- Feature Gate configuration values. Feature Gates will follow the same graduation process and requirements as feature gates
     # in Kubernetes. More information here https://kubernetes.io/docs/reference/command-line-tools-reference/feature-gates/#feature-gates-for-alpha-or-beta-features
     featureGates:
+      # -- drift is in BETA and is enabled by default.
+      # Setting drift to false disables the drift disruption method to watch for drift between currently deployed nodes
+      # and the desired state of nodes set in nodepools and nodeclasses
+      drift: true
       # -- spotToSpotConsolidation is ALPHA and is disabled by default.
       # Setting this to true will enable spot replacement consolidation for both single and multi-node consolidation.
       spotToSpotConsolidation: false
-      # -- nodeRepair is ALPHA and is disabled by default.
-      # Setting this to true will enable node repair.
-      nodeRepair: false
