--- a/controller/karpenter-node/default-nodepool.yaml
+++ b/controller/karpenter-node/default-nodepool.yaml
@@ -1,7 +1,7 @@
 apiVersion: karpenter.sh/v1beta1
 kind: NodePool
 metadata:
-  name: default
+  name: karpenter-default
 spec:
   template:
     spec:
