fix: fix karpenter nodepool default

--- a/controller/karpenter-node/default-nodepool.yaml
+++ b/controller/karpenter-node/default-nodepool.yaml
@@ -7,6 +7,8 @@ spec:
     spec:
       # References the Cloud Provider's NodeClass resource, see your cloud provider specific documentation
       nodeClassRef:
+        group: karpenter.k8s.aws  # Updated since only a single version will be served
+        kind: EC2NodeClass
         name: karpenter-default
 
       # # Provisioned nodes will have these taints
