--- a/controller/karpenter-node/default-nodepool.yaml
+++ b/controller/karpenter-node/default-nodepool.yaml
@@ -62,7 +62,8 @@ spec:
           # values: ["arm64", "amd64"]
         - key: "karpenter.sh/capacity-type"
           operator: In
-          values: ["spot", "on-demand"]
+          values: ["on-demand"]
+          # values: ["spot", "on-demand"]
         - key: "deploy-pool"
           operator: In
           values: ["default"]
