--- a/controller/karpenter-node/default-nodepool.yaml
+++ b/controller/karpenter-node/default-nodepool.yaml
@@ -49,10 +49,7 @@ spec:
           values: ["c", "m", "r"]
         - key: "karpenter.k8s.aws/instance-family"
           operator: In
-          values: ["m5","m5d","c5","c5d","c4","r4"]
-        - key: "karpenter.k8s.aws/instance-cpu"
-          operator: In
-          values: ["4", "8"]
+          values: ["m6i", "m5","m5d","c5","c5d","c4","r4"]
         - key: "topology.kubernetes.io/zone"
           operator: In
           values: ["ap-southeast-1a", "ap-southeast-1b", "ap-southeast-1c"]
